<resources>
    <string name="app_name">Evenzt</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_demo">Demo</string>
    <string name="address">"Address"</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">196873934067583</string>
    <string name="batcave">The Batcave is the secret headquarters, command center and safe house of the DC Comics superhero Batman, the alternate identity of playboy Bruce Wayne, consisting of a series of subterranean caves beneath his residence, Wayne Manor.\n\nOriginally, there was only a secret tunnel that ran underground between Wayne Manor and a dusty old barn where the Batmobile and Batmicrolite were kept. Later, in Batman #12 (August–September 1942), Bill Finger mentioned "secret underground hangars." In 1943, the writers of the first Batman movie serial, titled Batman, gave Batman a complete underground crime lab and introduced it in the second chapter entitled "The Bat's Cave". The entrance was via a secret passage through a grandfather clock and included bats flying around.</string>
    <string name="title_activity_first_screen">FirstScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_me">About me</string>
    <string name="edit">edit</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="interest">Interest</string>
    <string name="education">Education</string>
    <string name="occupation">Occupation</string>
    <string name="bio">Bio</string>
    <string name="facebook_connect">Facebook connect</string>
    <string name="google_connect">Google connect</string>
    <string name="add_friend">add friend</string>
    <string name="block">block</string>
    <string name="event_title">Event title</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="keyword">Keyword</string>
    <string name="category">Category</string>
    <string name="search">SEARCH</string>
    <string name="sign_in">Sign In</string>
    <string name="send">SEND</string>
    <string name="type_here">type here</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="start">start</string>
    <string name="end_date">End date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="event_details">Event details</string>
    <string name="enter_keywords_with_commas">Enter keywords with Commas</string>
    <string name="add_location">Add location +</string>
    <string name="public1">Public</string>
    <string name="private1">Private</string>
    <string name="invite_friends_to_join">invite friends to join</string>
    <string name="age">age</string>
    <string name="organization">Organization</string>
    <string name="save">SAVE</string>
    <string name="created_by_bruce_wayne">created by (Bruce Wayne)</string>
    <string name="_22_july_2016">22 July 2016</string>
    <string name="party_in_the_batcave">Party in the BatCave</string>
    <string name="join_before_20_august_2016">Join before 20 August (2016)</string>
    <string name="join">join</string>
    <string name="event_time">Event time</string>
    <string name="addresscolon">Address:</string>
    <string name="additional_details">additional details</string>
    <string name="_345_members_joined">345 members joined</string>
    <string name="submit_query">Submit query</string>
    <string name="requests">Requests</string>
    <string name="my_events">My Events</string>
    <string name="my_review">My Review</string>
    <string name="my_friends">My friends</string>
    <string name="users">Users</string>
    <string name="my_profile">My profile</string>
    <string name="log_out">Log out</string>
    <string name="add_new_friend">Add new friend</string>
    <string name="joined_events">Joined Events</string>
    <string name="joined_members_list">Joined members list</string>
    <string name="meet_your_city">Meet your city</string>
    <string name="login">login/register</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_email">Sign in/up with Email</string>
    <string name="create">CREATE</string>
    <string name="search_here">Search here</string>
    <string name="advanced_search">Advanced search</string>
    <string name="jjoin">JJoin</string>
    <string name="load_more">load more</string>
    <string name="name">Name</string>
    <string name="sync">Sync</string>
    <string name="change">Change:</string>
    <string name="username">Username/Email</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="reply">reply</string>
    <string name="asdasdasdasdasdasdasd">asdasdasdasdasdasdasd</string>
    <string name="checkedtextview">CheckedTextView</string>
    <string name="ok">OK</string>
    <string name="add_images">Add Images</string>
    <string name="delete_event">Delete Event</string>
    <string name="do_you_want_to_add_this_image">Do you want to add this image?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="reject">REJECT</string>
    <string name="accept">ACCEPT</string>
    <string name="no_events_found">No Events found</string>
    <string name="_16">16</string>
    <string name="aug">AUG</string>
    <string name="event_title_goes_here">Event title goes here</string>
    <string name="_16_aug_2016">16 AUG 2016</string>
    <string name="filter_by_categories">Filter by Categories</string>
    <string name="clear">CLEAR</string>
    <string name="filter">FILTER</string>
    <string name="accept1">Accept</string>
    <string name="decline1">Decline</string>
    <string name="my_friends1">My Friends</string>
    <string name="reject1">Reject</string>
    <string name="message">message</string>
    <string name="_0">0</string>
    <string name="posted_events">Posted Events</string>
    <string name="asdasdadadadadadsasd">asdasdadadadadadsasd</string>
    <string name="please_wait">Please wait...</string>
    <string name="enter_query_for_this_event">Enter query for this event</string>
    <string name="your_rating_here">Your Rating here</string>
    <string name="my_reviews">My Reviews</string>
    <string name="add_review">ADD REVIEW</string>
    <string name="choose_a_username_and_password">Choose a username and password</string>
    <string name="username1">Username</string>
    <string name="password">Password *</string>
    <string name="confirm_password">Confirm password *</string>
    <string name="set">SET</string>
    <string name="password1">Password</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="create_my_account">CREATE MY ACCOUNT</string>
    <string name="email_id">Email ID</string>
    <string name="retype_password">Retype password</string>
    <string name="by_creating_an_account_you_are_agree_to_our_n_terms_of_use_and_privacy_policy">By creating an account you are agree to our  Terms of Use and Privacy Policy</string>
    <string name="sign_up">Sign up</string>
    <string name="i_m_already_a_member">I\'m already a member</string>
    <string name="party">PARTY</string>
    <string name="unblock">UNBLOCK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name_to_change">Enter name to change</string>
    <string name="update">UPDATE</string>
    <string name="please_wait1">Please Wait</string>
    <string name="created_by">Created by</string>
    <string name="event1">Event:</string>
    <string name="start_date1">start date</string>
    <string name="end_date1">end date</string>
    <string name="start_time1">Start time</string>
    <string name="end_time1">end time</string>
    <string name="city1">CITY -</string>
    <string name="event_end_date">Event end date(</string>
    <string name="created_by2">created by</string>
    <string name="people_joined"> people joined</string>
    <string name="delete_edit">delete/edit</string>
    <string name="leave">Leave</string>
    <string name="join1">join</string>
    <string name="requested">Requested</string>
    <string name="rejected">Rejected</string>
    <string name="city2">CITY -</string>
    <string name="host">host</string>
    <string name="joined">Joined</string>
    <string name="hi">Hi,</string>
    <string name="city3">CITY -</string>
    <string name="event_end_date1">Event end date(</string>
    <string name="created_by_2">created by</string>
    <string name="created_by3"><![CDATA[<u>created by]]></string>
    <string name="delete_edit1">delete/edit</string>
    <string name="age3">Age -</string>
    <string name="messag">FRIENDS</string>
    <string name="requeste">REQUESTED</string>
    <string name="add_frien">ADD FRIEND</string>
    <string name="blocke">BLOCKED</string>
    <string name="bloc">BLOCK</string>
</resources>