<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:background="@drawable/background_round_corners_white"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:padding="18dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#000"
        android:id="@+id/name"
        android:padding="18dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cover_photo"
        android:textColor="#000"
        android:id="@+id/change_cover_photo"
        android:padding="18dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_photo"
        android:textColor="#000"
        android:id="@+id/change_profile_photo"
        android:padding="18dp"
        />


</LinearLayout>