<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:minWidth="300dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dark_shade"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_username_and_password"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="#ffffff"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="8dp"
        android:hint="@string/username1"
        android:layout_marginEnd="8dp"
        android:id="@+id/username"
        android:layout_marginTop="4dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@_"
        android:inputType="textFilter"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginBottom="4dp"
        android:background="@drawable/text_background"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/password"
        android:layout_marginStart="8dp"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/text_background"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColorHint="#ffffff"
        android:layout_marginStart="8dp"
        android:id="@+id/confirm"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:hint="@string/confirm_password"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/text_background"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:id="@+id/set"
        android:text="@string/set"
        android:textColor="#ffffff"
        />

</LinearLayout>