<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    tools:context="com.evenzt.Login3">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="18dp"
        android:layout_centerInParent="true"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/text_background"
            android:hint="@string/username"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@_."
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            android:id="@+id/email_login"
            android:textColor="#fff"
            android:textColorHint="#fff"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/text_background"
            android:hint="@string/password1"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
            android:layout_marginStart="2dp"
            android:id="@+id/password_login"
            android:inputType="textPassword"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="5dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:textColor="#fff"
            android:text="@string/keep_me_logged_in"
            android:layout_marginBottom="10dp"
            android:id="@+id/keep_logged_in"
            />




        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_white"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="2dp"
            android:id="@+id/signin"
            android:text="@string/sign_in"
            android:layout_marginBottom="15dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/i_forgot_my_password"
            android:textAllCaps="true"
            android:padding="10dp"
            android:id="@+id/forgot"
            android:textColor="#fff"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#fff"
            android:text="@string/create_my_account"
            android:id="@+id/create_page"
            android:textAllCaps="true"
            android:padding="10dp"
            />


    </LinearLayout>




</RelativeLayout>
