<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    tools:context="com.evenzt.Login3">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="18dp"
        android:layout_centerInParent="true"
        >



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_background"
            android:hint="@string/username1"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@_."
            android:inputType="textFilter"
            android:id="@+id/username"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="10dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/text_background"
            android:hint="@string/email_id"
            android:layout_marginStart="2dp"
            android:id="@+id/emailId"
            android:inputType="textEmailAddress"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="10dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:background="@drawable/text_background"
            android:hint="@string/password1"
            android:layout_marginStart="2dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="10dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/text_background"
            android:hint="@string/retype_password"
            android:layout_marginStart="2dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
            android:layout_marginEnd="2dp"
            android:id="@+id/retpassword"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/by_creating_an_account_you_are_agree_to_our_n_terms_of_use_and_privacy_policy"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:id="@+id/terms"
            android:textColor="#fff"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_white"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="2dp"
            android:text="@string/sign_up"
            android:id="@+id/signup"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#fff"
            android:text="@string/i_m_already_a_member"
            android:id="@+id/login_pager"
            android:textAllCaps="true"
            android:padding="10dp"
            android:gravity="center"
            />


    </LinearLayout>




</RelativeLayout>
