<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"

    cardView:cardUseCompatPadding="true"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

    <RelativeLayout
        android:layout_width="?android:attr/listPreferredItemHeight"
        android:background="@color/colorPrimary"
        android:layout_height="?android:attr/listPreferredItemHeight">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_16"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aug"
                android:textColor="#ffffff"
                android:textStyle="bold"
                />


        </LinearLayout>


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_title_goes_here"
            android:paddingStart="3dp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:textSize="18sp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_16_aug_2016"
            android:gravity="center"
            android:paddingTop="5dp"
            android:drawableStart="@drawable/cal"
            />





    </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>